@@ -1,19 +1,20 @@
 package com.github.haocen2004.login_simulation.login;
 
-import static com.github.haocen2004.login_simulation.util.Constant.HUAWEI_INIT;
-import static com.github.haocen2004.login_simulation.util.Logger.getLogger;
+import static com.github.haocen2004.login_simulation.data.Constant.HUAWEI_INIT;
+import static com.github.haocen2004.login_simulation.utils.Logger.getLogger;
 
 import android.annotation.SuppressLint;
 import android.content.Intent;
+import android.os.Build;
 import android.os.Looper;
 import android.text.TextUtils;
 
 import androidx.appcompat.app.AppCompatActivity;
 
 import com.github.haocen2004.login_simulation.data.RoleData;
-import com.github.haocen2004.login_simulation.util.Logger;
-import com.github.haocen2004.login_simulation.util.Network;
-import com.github.haocen2004.login_simulation.util.Tools;
+import com.github.haocen2004.login_simulation.utils.Logger;
+import com.github.haocen2004.login_simulation.utils.Network;
+import com.github.haocen2004.login_simulation.utils.Tools;
 import com.huawei.hmf.tasks.Task;
 import com.huawei.hms.api.HuaweiMobileServicesUtil;
 import com.huawei.hms.common.ApiException;
@@ -38,17 +39,18 @@ import org.json.JSONObject;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Objects;
 
 public class Huawei implements LoginImpl {
 
     private static final String TAG = "Huawei Login";
-    private String username;
     private final AppCompatActivity activity;
-    private boolean isLogin;
-    private RoleData roleData;
     private final Logger Log;
     private final LoginCallback callback;
+    private String username;
+    private boolean isLogin;
+    private RoleData roleData;
     private JSONObject verifyJson;
 
     public Huawei(AppCompatActivity activity, LoginCallback loginCallback) {
@@ -64,55 +66,97 @@ public class Huawei implements LoginImpl {
     }
 
     private void doHuaweiLogin() {
-        Task<AuthAccount> authAccountTask = AccountAuthManager.getService(activity, getHuaweiIdParams()).silentSignIn();
-        authAccountTask.addOnSuccessListener(
-                        authAccount -> {
-                            Logger.d(TAG, "Authentication succeeded.");
-                            Logger.d(TAG, "display:" + authAccount.getDisplayName());
+        if (Tools.getBoolean(activity, "hw_last_login_succeed", false)) {
+            Task<AuthAccount> authAccountTask = AccountAuthManager.getService(activity, getHuaweiIdParams()).silentSignIn();
+            authAccountTask.addOnSuccessListener(
+                            authAccount -> {
+                                Logger.d(TAG, "Authentication succeeded.");
+                                Logger.d(TAG, "display:" + authAccount.getDisplayName());
 //                            Logger.d(TAG, authAccount.getUid());
-                            getGamePlayer();   // 调用游戏登录接口
-                        })
-                .addOnFailureListener(
-                        e -> {
-                            if (e instanceof ApiException) {
-                                ApiException apiException = (ApiException) e;
-                                Logger.d(TAG, "signIn failed:" + apiException.getStatusCode());
-                                Logger.d(TAG, "start getSignInIntent");
-                                // 在此处实现华为帐号显式授权
-                                Intent intent = AccountAuthManager.getService(activity, getHuaweiIdParams()).getSignInIntent();
-                                callback.launchActivityForResult(intent, activityResult -> {
-                                    Intent data = activityResult.getData();
-                                    if (null == activityResult.getData()) {
-                                        Logger.d(TAG, "signIn intent is null");
-                                        callback.onLoginFailed();
-                                        return;
-                                    }
-                                    String jsonSignInResult = data.getStringExtra("HUAWEIID_SIGNIN_RESULT");
-                                    if (TextUtils.isEmpty(jsonSignInResult)) {
-                                        Logger.d(TAG, "SignIn result is empty");
-                                        callback.onLoginFailed();
-                                        return;
-                                    }
-                                    try {
-                                        AccountAuthResult signInResult = new AccountAuthResult().fromJson(jsonSignInResult);
-                                        if (0 == signInResult.getStatus().getStatusCode()) {
-                                            Logger.d(TAG, "Sign in success.");
-                                            Logger.d(TAG, "Sign in result: " + signInResult.toJson());
-//                                                SignInCenter.get().updateAuthAccount(signInResult.getAccount());
-                                            getGamePlayer();
-                                        } else {
-                                            Logger.d(TAG, "Sign in failed: " + signInResult.getStatus().getStatusCode());
+                                getGamePlayer();   // 调用游戏登录接口
+                            })
+                    .addOnFailureListener(
+                            e -> {
+                                if (e instanceof ApiException) {
+                                    ApiException apiException = (ApiException) e;
+                                    Logger.d(TAG, "signIn failed:" + apiException.getStatusCode());
+                                    Logger.d(TAG, "start getSignInIntent");
+                                    // 在此处实现华为帐号显式授权
+                                    Intent intent = AccountAuthManager.getService(activity, getHuaweiIdParams()).getSignInIntent();
+                                    callback.launchActivityForResult(intent, activityResult -> {
+                                        Intent data = activityResult.getData();
+                                        if (null == activityResult.getData()) {
+                                            Logger.d(TAG, "signIn intent is null");
                                             callback.onLoginFailed();
+                                            Tools.saveBoolean(activity, "hw_last_login_succeed", false);
+                                            return;
                                         }
-                                    } catch (JSONException var7) {
-                                        Logger.d(TAG, "Failed to convert json from signInResult.");
-                                        callback.onLoginFailed();
-                                    }
-                                });
-                            }
-                        });
+                                        String jsonSignInResult = data.getStringExtra("HUAWEIID_SIGNIN_RESULT");
+                                        if (TextUtils.isEmpty(jsonSignInResult)) {
+                                            Logger.d(TAG, "SignIn result is empty");
+                                            callback.onLoginFailed();
+                                            Tools.saveBoolean(activity, "hw_last_login_succeed", false);
+                                            return;
+                                        }
+                                        try {
+                                            AccountAuthResult signInResult = new AccountAuthResult().fromJson(jsonSignInResult);
+                                            if (0 == signInResult.getStatus().getStatusCode()) {
+                                                Logger.d(TAG, "Sign in success.");
+                                                Logger.d(TAG, "Sign in result: " + signInResult.toJson());
+//                                                SignInCenter.get().updateAuthAccount(signInResult.getAccount());
+                                                getGamePlayer();
+                                            } else {
+                                                Logger.d(TAG, "Sign in failed: " + signInResult.getStatus().getStatusCode());
+                                                callback.onLoginFailed();
+                                                Tools.saveBoolean(activity, "hw_last_login_succeed", false);
+                                            }
+                                        } catch (JSONException var7) {
+                                            Logger.d(TAG, "Failed to convert json from signInResult.");
+                                            callback.onLoginFailed();
+                                            Tools.saveBoolean(activity, "hw_last_login_succeed", false);
+                                        }
+                                    });
+                                }
+                            });
+        } else {
+            Intent intent = AccountAuthManager.getService(activity, getHuaweiIdParams()).getSignInIntent();
+            callback.launchActivityForResult(intent, activityResult -> {
+                Intent data = activityResult.getData();
+                if (null == activityResult.getData()) {
+                    Logger.d(TAG, "signIn intent is null");
+                    callback.onLoginFailed();
+                    Tools.saveBoolean(activity, "hw_last_login_succeed", false);
+                    return;
+                }
+                String jsonSignInResult = data.getStringExtra("HUAWEIID_SIGNIN_RESULT");
+                if (TextUtils.isEmpty(jsonSignInResult)) {
+                    Logger.d(TAG, "SignIn result is empty");
+                    callback.onLoginFailed();
+                    Tools.saveBoolean(activity, "hw_last_login_succeed", false);
+                    return;
+                }
+                try {
+                    AccountAuthResult signInResult = new AccountAuthResult().fromJson(jsonSignInResult);
+                    if (0 == signInResult.getStatus().getStatusCode()) {
+                        Logger.d(TAG, "Sign in success.");
+                        Logger.d(TAG, "Sign in result: " + signInResult.toJson());
+//                                                SignInCenter.get().updateAuthAccount(signInResult.getAccount());
+                        getGamePlayer();
+                    } else {
+                        Logger.d(TAG, "Sign in failed: " + signInResult.getStatus().getStatusCode());
+                        callback.onLoginFailed();
+                        Tools.saveBoolean(activity, "hw_last_login_succeed", false);
+                    }
+                } catch (JSONException var7) {
+                    Logger.d(TAG, "Failed to convert json from signInResult.");
+                    callback.onLoginFailed();
+                    Tools.saveBoolean(activity, "hw_last_login_succeed", false);
+                }
+            });
+        }
     }
 
+    @SuppressLint("NewApi")
     public void getGamePlayer() {
         // 调用getPlayersClient方法初始化
         PlayersClient client = Games.getPlayersClient(activity);
@@ -126,11 +170,17 @@ public class Huawei implements LoginImpl {
             Logger.addBlacklist(accessToken);
             username = player.getDisplayName();
             String body = null;
-            try {
-                Logger.addBlacklist(URLEncoder.encode(accessToken, "utf-8"));
-                body = "extraBody=json%3D%7B%22appId%22%3A%2210624714%22%7D&method=client.hms.gs.getGameAuthSign&hmsApkVersionCode=60700322&accessToken=" + URLEncoder.encode(accessToken, "utf-8");
-            } catch (UnsupportedEncodingException e) {
-                e.printStackTrace();
+            if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
+                Logger.addBlacklist(URLEncoder.encode(accessToken, StandardCharsets.UTF_8));
+                body = "extraBody=json%3D%7B%22appId%22%3A%2210624714%22%7D&method=client.hms.gs.getGameAuthSign&hmsApkVersionCode=60700322&accessToken=" + URLEncoder.encode(accessToken, StandardCharsets.UTF_8);
+            } else {
+                try {
+                    String encoder = "utf-8";
+                    Logger.addBlacklist(URLEncoder.encode(accessToken, encoder));
+                    body = "extraBody=json%3D%7B%22appId%22%3A%2210624714%22%7D&method=client.hms.gs.getGameAuthSign&hmsApkVersionCode=60700322&accessToken=" + URLEncoder.encode(accessToken, encoder);
+                } catch (UnsupportedEncodingException e) {
+                    e.printStackTrace();
+                }
             }
             String finalBody = body;
             new Thread() {
@@ -140,7 +190,7 @@ public class Huawei implements LoginImpl {
                     JSONObject huaweiJson = null;
 //                    while (true) {
                     Logger.d(TAG, finalBody);
-                    String huaweiFeedback = Network.sendPost("https://jgw-drcn.jos.dbankcloud.cn/gameservice/api/gbClientApi", finalBody);
+                    String huaweiFeedback = Network.sendPost("https://jos-open-api.cloud.huawei.com/gameservice/api/gbClientApi", finalBody);
 //                    Logger.d(TAG, huaweiFeedback);
                     try {
                         huaweiJson = new JSONObject(huaweiFeedback);
@@ -168,7 +218,7 @@ public class Huawei implements LoginImpl {
                         e.printStackTrace();
                     }
 
-                    JSONObject feedback_json = new JSONObject();
+                    JSONObject feedback_json = null;
                     try {
                         feedback_json = new JSONObject(Objects.requireNonNull(Tools.verifyAccount(activity, "15", verifyJson.toString())));
                     } catch (JSONException e) {
@@ -178,9 +228,11 @@ public class Huawei implements LoginImpl {
                         if (feedback_json == null) {
                             makeToast("Empty Return");
                             callback.onLoginFailed();
+                            Tools.saveBoolean(activity, "hw_last_login_succeed", false);
                         } else if (feedback_json.getInt("retcode") != 0) {
                             makeToast(feedback_json.getString("message"));
                             callback.onLoginFailed();
+                            Tools.saveBoolean(activity, "hw_last_login_succeed", false);
                         } else {
                             JSONObject data_json2 = feedback_json.getJSONObject("data");
                             String combo_id = data_json2.getString("combo_id");
@@ -188,7 +240,7 @@ public class Huawei implements LoginImpl {
                             String combo_token = data_json2.getString("combo_token");
                             Logger.addBlacklist(combo_token);
 //                        String account_type = data_json2.getString("account_type");
-
+                            Tools.saveBoolean(activity, "hw_last_login_succeed", true);
                             roleData = new RoleData(open_id, "", combo_id, combo_token, "15", "2", "huawei", 10, callback);
                             isLogin = true;
 //                        makeToast(activity.getString(R.string.login_succeed));
@@ -198,6 +250,7 @@ public class Huawei implements LoginImpl {
                         CrashReport.postCatchedException(e);
                         makeToast("parse ERROR");
                         callback.onLoginFailed();
+                        Tools.saveBoolean(activity, "hw_last_login_succeed", false);
                     }
 
                 }
@@ -207,9 +260,11 @@ public class Huawei implements LoginImpl {
 
 
     @Override
-    public void logout() {
+    public boolean logout() {
         isLogin = false;
-
+        AccountAuthManager.getService(activity, getHuaweiIdParams()).logout().addOnSuccessListener(unused -> Log.makeToast("登出成功"));
+        Tools.saveBoolean(activity, "hw_last_login_succeed", false);
+        return true;
 
     }
 
@@ -255,11 +310,13 @@ public class Huawei implements LoginImpl {
                             if (statusCode == JosStatusCodes.JOS_PRIVACY_PROTOCOL_REJECTED) { // 错误码为7401时表示用户未同意华为联运隐私协议
                                 Logger.i(TAG, "has reject the protocol");
                                 callback.onLoginFailed();
+                                Tools.saveBoolean(activity, "hw_last_login_succeed", false);
                                 // 此处您需禁止玩家进入游戏
                             } else if (statusCode == GamesStatusCodes.GAME_STATE_NETWORK_ERROR) { // 错误码7002表示网络异常
                                 Logger.i(TAG, "Network error");
                                 Log.makeToast("网络连接失败 请检查网络后重试");
                                 callback.onLoginFailed();
+                                Tools.saveBoolean(activity, "hw_last_login_succeed", false);
                                 // 此处您可提示玩家检查网络，请不要重复调用init接口，否则断网情况下可能会造成手机高耗电。
                             } else if (statusCode == 907135003) {
                                 // 907135003表示玩家取消HMS Core升级或组件升级
@@ -268,6 +325,7 @@ public class Huawei implements LoginImpl {
                             } else {
                                 Logger.d(TAG, "API error: " + statusCode);
                                 callback.onLoginFailed();
+                                Tools.saveBoolean(activity, "hw_last_login_succeed", false);
                                 // 在此处实现其他错误码的处理
                             }
                         }
@@ -278,6 +336,12 @@ public class Huawei implements LoginImpl {
     @Override
     public RoleData getRole() {
         return roleData;
+    }
+
+    @Override
+    public void setRole(RoleData roleData) {
+        this.roleData = roleData;
+        isLogin = true;
     }
 
     @SuppressLint("ShowToast")
@@ -301,12 +365,6 @@ public class Huawei implements LoginImpl {
     @Override
     public String getUsername() {
         return username;
-    }
-
-    @Override
-    public void setRole(RoleData roleData) {
-        this.roleData = roleData;
-        isLogin = true;
     }
 
 
